--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,20 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android-extensions'
 }
 
 android {
     namespace 'com.uygulamalarim.kumbara'
-    compileSdk 32
+    compileSdk 33
 
+    /*buildFeatures{
+        viewBinding true
+    }*/
     defaultConfig {
         applicationId "com.uygulamalarim.kumbara"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -41,4 +45,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.airbnb.android:lottie:6.0.0'
 }
